# gd32f407_jlc

./: .gitignore  CMakeLists.txt
Template/app/: main.c
Template/project/MDK(V5)/: project.uvoptx
blink/: CMakeLists.txt
blink/app/: main.c
blink/project/MDK(V5)/: project.uvprojx
board/: board.h
